
syntax = "proto3";

package api;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

option go_package = "github.com/panyam/protoc-gen-dal/tests/gen/go/api;testapi";

// A sample test record with extra types for testing conversion
message TestRecord1 {
  google.protobuf.Timestamp time_field = 1;
  google.protobuf.Any extra_data = 2;
}
